and album and signup shells

--- a/shout/www/app/layout/tabs.html
+++ b/shout/www/app/layout/tabs.html
@@ -7,9 +7,18 @@ navigation history that also transitions its views in and out.
 <!-- TODO: tabs-striped add this class and style it differently later on-->
 
 
-  <!-- Chats Tab -->
-  <ion-tab title="Menu" icon-off="ion-android-menu" icon-on="ion-android-menu" href="#/tab/chats">
+<!-- Chats Tab -->
+<!--   <ion-tab title="Menu" icon-off="ion-android-menu" icon-on="ion-android-menu" href="#/tab/chats">
     <ion-nav-view name="tab-chats"></ion-nav-view>
+  </ion-tab> -->
+  <!-- Settings Tab -->
+  <ion-tab title="Settings" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/settings">
+    <ion-nav-view name="tab-settings"></ion-nav-view>
+  </ion-tab>
+
+  <!-- Album Tab -->
+  <ion-tab title="Album" icon-off="ion-ios-book-outline" icon-on="ion-ios-book" href="#/tab/album">
+    <ion-nav-view name="tab-album"></ion-nav-view>
   </ion-tab>
 
   <!-- Inbox Tab -->
@@ -17,10 +26,6 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-inbox"></ion-nav-view>
   </ion-tab>
 
-  <!-- Settings Tab -->
-  <ion-tab title="Settings" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/settings">
-    <ion-nav-view name="tab-settings"></ion-nav-view>
-  </ion-tab>
 
   <!-- Camera Tab -->
   <ion-tab title="Camera" icon-off="ion-ios-camera-outline" icon-on="ion-ios-camera" href="#/tab/camera">
