move camera button into clickable icon in tabs tray; implement infinite scrolling; doesn't work with photos yet

--- a/shout/www/app/layout/tabs.html
+++ b/shout/www/app/layout/tabs.html
@@ -22,6 +22,10 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-inbox"></ion-nav-view>
   </ion-tab>
 
+  <!-- Camera Tab -->
+  <ion-tab title="Camera" icon-off="ion-ios-camera-outline" icon-on="ion-ios-camera" ng-click="vm.takePicture()">
+  </ion-tab>
+
 </ion-tabs>
 
 
