--- a/dashboard/public/styles/styles.css
+++ b/dashboard/public/styles/styles.css
@@ -4,9 +4,11 @@
 }
 
 html{
-    font:14px normal Arial, sans-serif;
-    color:#626771;
-    background-color:#fff;
+  font-family: DINCondensed-Bold;
+  font-size: 20px;
+  color: #B0DCE8;
+  line-height: 53px;
+  background: #D4D4D4;
 }
 
 .viewPort {
@@ -15,7 +17,11 @@ html{
 
 .side-content {
   float: left;
+  height: 100%;
+  overflow: auto; 
   margin: 5px;
+  background: rgba(0,0,0,0.6);
+  border: 1px solid #979797;
 }
 
 .Map {
@@ -30,4 +36,52 @@ html{
 .Chart {
   height: 800px;
   width: 800px;
+  position: absolute;
+  top: 52px;
 }
+
+.nav-menu {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 50px;
+  background: #1E1F1F;
+  border: 1px solid #979797;
+}
+
+.nav-bar{
+  height: 100%;
+}
+
+//////////////////
+
+.nav-link{
+  display: inline-block;
+  padding: 13px 20px;
+  margin: 0 10px;
+  cursor:pointer;
+  text-decoration: none;
+  background-color:#eee;
+  color: #B0DCE8;
+  transition:0.3s;
+}
+
+.nav-link:hover{
+  background: rgba(72,164,190,0.2);
+  height: 50px;
+}
+
+.nav-link-focused{
+  display: inline-block;
+  padding: 13px 20px;
+  cursor:pointer;
+  background-color:#eee;
+  color:#fff;
+  background-color:#41c7c2;
+}
+
+a {
+  text-decoration: none; 
+  color: #B0DCE8;
+}
+
