--- a/dashboard/public/styles/styles.css
+++ b/dashboard/public/styles/styles.css
@@ -8,16 +8,31 @@ html{
   font-size: 20px;
   color: #B0DCE8;
   line-height: 53px;
-  background: #D4D4D4;
+  background-image: url('../assets/ripples1.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .viewPort {
     overflow: hidden;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+}
+
+#dashboard {
+  width: 100%;
+  height: 100%;
 }
 
 .home {
   position: absolute;
-  top: 52px;
+  top: 70px;
+  left: 10px;
   height: 100%;
   overflow: auto; 
   background: rgba(0,0,0,0.6);
@@ -38,8 +53,8 @@ html{
   height: 650px;
   width: 800px;
   position: absolute;
-  top: 52px;
-  left: 310px;
+  top: 70px;
+  left: 340px;
 }
 
 .nav-menu {
@@ -47,7 +62,7 @@ html{
   top: 0;
   width: 100%;
   height: 50px;
-  background: #1E1F1F;
+  background: rgba(0,0,0,0.6);
   border: 1px solid #979797;
 }
 
@@ -55,30 +70,31 @@ html{
   width: 100%;
 }
 
-//////////////////
-
-.nav-link{
+.nav-link-focused{
   display: inline-block;
-  padding: 13px 20px;
+  cursor:pointer;
+  color: #B0DCE8;
+  background: rgba(72,164,190,0.2);
+  padding: 0 10px;
+
+}
+.nav-link:hover{
+  display: inline-block;
+  cursor:pointer;
+  color: #B0DCE8;
+  background: rgba(72,164,190,0.2);
+  padding: 0 10px;
+}
+a.nav-link{
+  display: inline-block;
+  height: 100%;
   margin: 0 10px;
   cursor:pointer;
   text-decoration: none;
-  background-color:#eee;
   color: #B0DCE8;
   transition:0.3s;
-}
+  padding: 0 10px;
 
-.nav-link:hover{
-  background: rgba(72,164,190,0.2);
-  height: 50px;
-}
-
-.nav-link-focused{
-  display: inline-block;
-  padding: 13px 20px;
-  cursor:pointer;
-  color: #B0DCE8;
-  background: rgba(72,164,190,0.2);
 }
 
 a {
