--- a/dashboard/public/styles/styles.css
+++ b/dashboard/public/styles/styles.css
@@ -48,8 +48,50 @@ html{
   height: 850px;
   overflow: auto; 
   background: rgba(0,0,0,0.6);
-  /*border: 1px solid #41637E;*/
   margin: 0 auto;
+}
+
+.search {
+  float: left;
+  position: relative;
+  width: 310px;
+  top: 0;
+  left: 0px;
+  height: 300px;
+  overflow: auto; 
+  background: rgba(0,0,0,0.6);
+  margin: 0 auto;
+}
+
+.search-btn {
+  width: 100px;
+  height: 40px;
+  margin: 0 auto;
+  text-align: center;
+  border-radius: 10px;
+  border: 1px solid #fff;
+}
+
+.search-btn:hover{
+  cursor:pointer;
+  color: #B0DCE8;
+  background: rgba(72,164,190,0.2);
+}
+
+input[type=text] {
+  display: block;
+  width: 200px;
+  height: 40px;
+  margin: 5px auto;
+  font-size: 20px;
+  background: rgba(0,0,0,0.6);
+  border-radius: 10px;
+  border: 1px solid #fff;
+  color: #fff;
+}
+
+input:focus, textarea:focus {
+    outline: none;
 }
 
 .photos {
@@ -92,7 +134,6 @@ img.photo {
   width: 100%;
   height: 50px;
   background: rgba(66,103,127,0.30);
-  /*background: rgba(0,36,57,0.70);*/
   border: 2px solid #002539;
 }
 
@@ -107,7 +148,6 @@ img.photo {
   width: 100%;
   height: 50px;
   background: rgba(0,0,0,0.6);
-  /*border: 1px solid #41637E;*/
 }
 
 .nav-link-focused{
@@ -118,7 +158,7 @@ img.photo {
   padding: 0 10px;
 
 }
-.nav-link:hover{
+.nav-link:hover {
   display: inline-block;
   cursor:pointer;
   color: #B0DCE8;
@@ -150,6 +190,7 @@ a {
 
 .recent-ripples {
   text-align: center;
+  line-height: 40px;
 }
 
 .photo-holder {
