ALL YOUR UI ARE BELONG TO US

--- a/shout/scss/ionic.app.scss
+++ b/shout/scss/ionic.app.scss
@@ -17,6 +17,9 @@ $dark:                            #444 !default;
 
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
+// $positive:                        #397A96 !default;
+$positive:                        #3AFEA4 !default;
+
 
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
