--- a/shout/www/app/layout/tabs.html
+++ b/shout/www/app/layout/tabs.html
@@ -25,7 +25,7 @@ navigation history that also transitions its views in and out.
 
 
 
-<ion-tabs class="tabs-striped tabs-bottom tabs-background-positive tabs-color-light">
+<ion-tabs class="tabs-striped ink">
 
   <!-- Album Tab -->
   <ion-tab title="Album" icon-off="ion-ios-book-outline" icon-on="ion-ios-book" href="#/tab/album">
