--- a/shout/www/css/style.css
+++ b/shout/www/css/style.css
@@ -1,38 +1,221 @@
 /* Empty. Add your own CSS if you like */
 
+* {
+  font-family: Avenir-Book, RobotoDraft, Roboto, "Helvetica Neue", "Segoe UI", sans-serif;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  color: #FFF;
+  font-weight: 500;
+  font-family: Avenir-Book, "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+  line-height: 1.2;
+}
+.item p {
+  color: #FFF;
+  font-size: 14px;
+  margin-bottom: 2px;
+}
+.bar-header {
+  top: 0;
+  border-top-width: 0;
+  border-bottom-width: 1px;
+  background-color: transparent;
+  color: white;
+  opacity: .8;
+}
+.tabs-striped .tabs {
+  background-color: transparent;
+  border-bottom: 0px;
+  padding-top: 2px;
+  opacity: .8;
+  color: white;
+}
+.tabs-striped .tab-item.tab-item-active,
+.tabs-striped .tab-item.active,
+.tabs-striped .tab-item.activated {
+  margin-top: -2px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-width: 1px 0 0 0;
+  /* border-color: #444; */
+}
+/* Enter name: */
+
+.popup-buttons .button .ripple {
+  margin-right: 0px;
+  border-color: #FFFFFF;
+  background-color: #5D6167;
+  color: #fff;
+  border-radius: 50px;
+  opacity: .8;
+}
+.popup-container.active .popup {
+  -webkit-animation-name: superScaleIn;
+  animation-name: superScaleIn;
+  -webkit-animation-duration: 0.2s;
+  animation-duration: 0.2s;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  /* opacity: .5; */
+  background-color: rgba(252, 252, 252, 0.7);
+  /* background-color: #DDD; */
+  border-radius: 10px;
+  text-align: center;
+}
+.login .item {
+  border-bottom: 1px solid white;
+}
+.item-stacked-label .input-label,
+.item-stacked-label .icon {
+  display: inline-block;
+  padding: 4px 0 0 0px;
+  vertical-align: middle;
+  font-family: Avenir-Book;
+  font-size: 14px;
+  color: #FFFFFF;
+  line-height: 28px;
+  letter-spacing: 4px;
+}
+textarea,
+input[type="text"],
+input[type="password"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="date"],
+input[type="month"],
+input[type="time"],
+input[type="week"],
+input[type="number"],
+input[type="email"],
+input[type="url"],
+input[type="search"],
+input[type="tel"],
+input[type="color"] {
+  border: 0;
+  font-family: Avenir-Book;
+  font-size: 14px;
+  color: #FFFFFF;
+  letter-spacing: 4px;
+  line-height: 20px;
+}
+.padding > .button.button-block:first-child {
+  opacity: .8;
+  /* bg: */
+  border: 1px solid #FFFFFF;
+  border-radius: 100px;
+  /* Sign In: */
+  font-family: Avenir-Book;
+  font-size: 14px;
+  color: #FFFFFF;
+  line-height: 28px;
+  text-align: center;
+  text-transform: capitalize;
+}
+.bar.bar-clear .title {
+  color: #fff;
+  text-decoration: none;
+}
+.bar.bar-clear .title span.signup {
+  display: inline;
+  color: #fff;
+  /* SIGN UP: */
+  font-family: Avenir-Book;
+  font-size: 12px;
+  color: #FFFFFF;
+  letter-spacing: 2px;
+  line-height: 10px;
+  text-decoration: none;
+}
+.bar.bar-clear .title span.account {
+  /* DON’T HAVE AN ACCOUN: */
+  display: inline;
+  opacity: 0.5;
+  font-family: Avenir-Book;
+  font-size: 12px;
+  color: #FFFFFF;
+  letter-spacing: 2px;
+  line-height: 10px;
+  text-decoration: none;
+}
+/* Sketch doesnt export gradient borders at this point */
+
+/* oval: */
+
+/* border: 2px solid #FFFFFF; */
+
+/* shape: */
+
+/* border: 2px solid #FFFFFF; */
+
+/* path: */
+
+/* border: 2px solid #FFFFFF; */
+
+/* bounds: */
+
+/* bg: */
+
+.sign-in {
+  opacity: 0.5;
+  border: 2px solid #FFFFFF;
+  border-radius: 100px;
+}
+/* Sign In: */
+
+.sign-in-text {
+  font-family: Avenir-Book;
+  font-size: 28px;
+  color: #FFFFFF;
+  line-height: 28px;
+}
+.ion-ios-person-outline:before {
+  content: "\f47d";
+  border-radius: 50%;
+  border: 1px;
+  border-color: white;
+}
+.hero.no-header {
+  height: 200px;
+}
+.hero .hero-icon {
+  box-shadow: 0 0 2px 0 rgba(255, 255, 255, 1);
+  border-radius: 50%;
+  display: inline-block;
+  height: 150px;
+  padding: 00px 30px;
+  line-height: 136px;
+  width: 150px;
+}
 .loginTitle {
-  font-family: DINCondensed-Bold;
+  font-family: Avenir-Book;
   font-size: 8vh;
   line-height: 1em;
-  letter-spacing: 4vh;
+  letter-spacing: 2vh;
   padding-left: 3vh;
-  color: #444;
+  color: #FFF;
   text-align: center;
-  margin-top:10vh;
+  margin-top: 5vh;
+  margin-bottom: 0;
   opacity: 0.5;
 }
-
-.loginScreen {
-  background: -webkit-linear-gradient(white, white, #d5d5d5); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(white, white, #d5d5d5); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(white, white, #d5d5d5); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(white, white, #d5d5d5); /* Standard syntax */
-}
-
 .loginItem {
   margin: 0px;
   border: 0;
 }
-
 .signuplink {
   text-align: center;
 }
-
-.flex {
-  display: flex;
-  justify-content: center;
-}
-
 /*.tabs-nav {
   display:none;
 }*/
@@ -41,6 +224,7 @@
   top: 0px;
 }
 */
+
 /*
 .loginInputContainer {
   display: flex;
@@ -49,6 +233,7 @@
   padding: 5px;
 }
 */
+
 /* LoginContainer: */
 
 /*
@@ -63,6 +248,7 @@
   height: 26vh;
 }
 */
+
 /* Input: */
 
 /*
@@ -97,6 +283,7 @@
   padding-left: 5vw;
 }
 */
+
 /* Review Page */
 
 /*
@@ -120,3 +307,128 @@
   align-self: center;
 }
 */
+
+.pane,
+.view {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  background-image: url('../img/bg.png');
+  overflow: hidden;
+}
+.list .item {
+  border: none;
+  min-height: 48px;
+  text-align: left;
+  background-color: transparent;
+  padding-right: 16px;
+}
+.item.item-divider {
+  border-top: solid 1px rgba(255, 255, 255, .25);
+  font-size: 14px;
+  font-weight: 600;
+  height: 48px;
+  line-height: 48px;
+  color: white;
+  background-color: transparent;
+}
+.button.button-positive {
+  border: 1px solid rgba(255, 255, 255, .5);
+  background-color: transparent;
+  color: #fff;
+  border-radius: 25px;
+  font-weight: 200;
+}
+.card {
+  padding-top: 1px;
+  padding-bottom: 1px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  background-color: transparent;
+}
+textarea,
+input[type="text"],
+input[type="password"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="date"],
+input[type="month"],
+input[type="time"],
+input[type="week"],
+input[type="number"],
+input[type="email"],
+input[type="url"],
+input[type="search"],
+input[type="tel"],
+input[type="color"] {
+  background-color: rgba(255, 255, 255, .2);
+  opacity: 1;
+}
+.button-block.ink,
+.button-full.ink,
+.button-block:after {
+  border: 1px solid rgba(255, 255, 255, .5);
+  background-color: transparent;
+  color: #fff;
+  border-radius: 25px;
+  font-weight: 200;
+}
+.toggle .track {
+  background-color: transparent;
+}
+.item-thumbnail-left > img:first-child,
+.item-thumbnail-left .item-image,
+.item-thumbnail-left .item-content > img:first-child,
+.item-thumbnail-left .item-content .item-image {
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  max-width: 50vw;
+  max-height: 50vw;
+  overflow: hidden;
+  /* width: 100%; */
+  /* height: 100%; */
+  border-radius: 0px;
+}
+.list .photo.item {
+  margin-top: 2px;
+  text-align: right;
+  min-height: 200px;
+  padding: 5px;
+  height: 150px;
+  background-color: rgba(255, 255, 255, 0.05);
+}
+.counter {
+  position: absolute;
+  color: rgba(255, 255, 255, .5);
+  bottom: 2px;
+  right: 2px;
+}
+.photo-description {} label.item.item-input.review {
+  padding-left: 0;
+  border: none;
+}
+div {
+  border: none;
+}
+.item.item-image {
+  border: none;
+}
+.button-bar {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, .15);
+  bottom: 0;
+  right: 0;
+  position: absolute;
+}
+.button-bar>.button .icon:before,
+.button-bar>.button:before {
+  line-height: initial;
+  color: white;
+}
+.float-container {
+  position: relative;
+}
