--- a/dashboard/public/styles/styles.css
+++ b/dashboard/public/styles/styles.css
@@ -17,7 +17,7 @@ html{
 .viewPort {
   overflow-y: hidden;
   overflow-x: hidden; 
-  background: rgba(66,103,127,0.30);
+  background: rgba(66,103,127,0.70);
   width: 100%;
   height: 1000px;
   position: absolute;
@@ -62,7 +62,7 @@ html{
   left: 0;
   height: 150px;
   overflow: auto; 
-  background: rgba(0,0,0,0.2);
+  background: rgba(0,0,0,0.1);
   margin: 0 auto;
   border-radius: 3px;
 }
@@ -115,7 +115,7 @@ input:focus, textarea:focus {
   height: 850px;
   overflow: auto;
   margin: 0 auto;
-  background: rgba(0,0,0,0.2);
+  background: rgba(0,0,0,0.1);
   border-radius: 3px;
 
 }
@@ -156,7 +156,7 @@ img.photo {
   width: 200px;
   margin: 30px auto;
   border-radius: 3px;
-  border: 3px solid rgba(0,0,0,0.2);
+  border: 3px solid rgba(0,0,0,0.1);
 }
 
 
@@ -239,7 +239,7 @@ a {
   width: 100%;
   color: #B0DCE8;
   margin: 0 auto 20px;
-  background: rgba(0,0,0,0.2);
+  background: rgba(0,0,0,0.1);
   border-radius: 3px;
 }
 
@@ -252,15 +252,36 @@ a {
   color: #A5ADB8;
 }
 
+.search-text {
+  text-align: center;
+  line-height: 40px;
+  height: 80px;
+  color: #B0DCE8;
+  margin: 0 auto;
+  color: #B0DCE8;
+}
+
 .photo-holder {
   float: left;
   width: 310px;
   position: absolute;
-  top: 57px;
+  top: 59px;
   left: 675px;
   background: #FFFFFF;
   border-radius: 3px;
   color: #A5ADB8;
+}
+
+.stats {
+  float: left;
+  width: 290px;
+  position: absolute;
+  top: 250px;
+  left: 675px;
+  background: #FFFFFF;
+  border-radius: 3px;
+  color: #A5ADB8;
+  padding: 10px;
 }
 
 .content {
@@ -278,7 +299,7 @@ a {
   position: relative;
   top: 0;
   left: 315px;
-  background: #EFEFEF;
+  background-color: #EFEFF0;
   border: 1px solid #DDDDDD;
   border-radius: 3px;
 }
