--- a/shout/www/css/style.css
+++ b/shout/www/css/style.css
@@ -35,11 +35,17 @@ h6,
     position: relative;
 }*/
 
+.item {
+  border: none;
+}
+
 .item p {
   color: #FFF;
   font-size: 14px;
   margin-bottom: 2px;
 }
+
+
 .bar-header {
   top: 0;
   border-top-width: 0;
