--- a/shout/www/css/style.css
+++ b/shout/www/css/style.css
@@ -3736,3 +3736,15 @@ Copyright (c) 2015 Daniel Eden
   animation-name: slideOutUp;
 }
 
+.spinner {
+  margin: 0 auto;
+  display: block;
+}
+
+.spinner svg {
+  width: 75px;
+  height: 75px;
+  stroke: #3AFEA4;
+  fill: #3AFEA4;
+}
+
