--- a/shout/www/css/ionic.app.css
+++ b/shout/www/css/ionic.app.css
@@ -4503,7 +4503,8 @@ ion-tabs.tabs-color-active-dark .tab-item {
     -webkit-animation-timing-function: ease-in-out;
     animation-timing-function: ease-in-out;
     -webkit-animation-fill-mode: both;
-    animation-fill-mode: both; }
+    animation-fill-mode: both; 
+  }
   .popup-container.active .popup {
     -webkit-animation-name: superScaleIn;
     animation-name: superScaleIn;
@@ -4512,12 +4513,13 @@ ion-tabs.tabs-color-active-dark .tab-item {
     -webkit-animation-timing-function: ease-in-out;
     animation-timing-function: ease-in-out;
     -webkit-animation-fill-mode: both;
-    animation-fill-mode: both; }
+    animation-fill-mode: both; 
+  } 
   .popup-container .popup {
     width: 250px;
     max-width: 100%;
     max-height: 90%;
-    border-radius: 0px;
+    border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.9);
     display: -webkit-box;
     display: -webkit-flex;
