--- a/shout/www/css/style.css
+++ b/shout/www/css/style.css
@@ -87,6 +87,25 @@ div.tab-nav.tabs {
   border-radius: 50px;
   opacity: .8;
 }
+.popup-container .popup {
+    width: 250px;
+    max-width: 100%;
+    max-height: 90%;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.9);
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-direction: normal;
+    -webkit-box-orient: vertical;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column; 
+  }
 .popup-container.active .popup {
   -webkit-animation-name: superScaleIn;
   animation-name: superScaleIn;
