--- a/shout/www/css/style.css
+++ b/shout/www/css/style.css
@@ -503,7 +503,12 @@ div {
   display: block;
 }
 .spinner svg {
-  width: 75px;
-  height: 75px;
+  position: fixed;
+  width: 80px;
+  height: 80px;
+  top: 50%;
+  left: 50%;
+  margin-top: -40px;
+  margin-left: -40px;
   stroke: #3AFEA4;
   fill: #3AFEA4;
