--- a/dashboard/public/styles/styles.css
+++ b/dashboard/public/styles/styles.css
@@ -12,6 +12,7 @@ html{
   background-repeat: no-repeat;
   background-size: cover;
   letter-spacing: 2px;
+  height: 825px;
 }
 
 .viewPort {
@@ -19,7 +20,7 @@ html{
   overflow-x: hidden; 
   background: rgba(66,103,127,0.70);
   width: 100%;
-  height: 1000px;
+  height: 825px;
   position: absolute;
   margin-left: auto;
   margin-right: auto;
@@ -48,7 +49,7 @@ html{
   width: 100%;
   top: 0;
   left: 0px;
-  height: 850px;
+  height: 800px;
   margin: 0 auto;
 }
 
@@ -103,7 +104,7 @@ input:focus, textarea:focus {
   overflow: auto; 
   margin: 0 auto;
   width: 100%;
-  height: 850px;
+  height: 650px;
 }
 
 .scroll {
@@ -112,7 +113,7 @@ input:focus, textarea:focus {
   width: 100%;
   top: 0;
   left: 0px;
-  height: 850px;
+  height: 650px;
   overflow: auto;
   margin: 0 auto;
   background: rgba(0,0,0,0.1);
@@ -156,7 +157,7 @@ img.photo {
   width: 200px;
   margin: 30px auto;
   border-radius: 3px;
-  border: 3px solid rgba(0,0,0,0.1);
+  border: 4px solid rgba(0,0,0,0.1);
 }
 
 
@@ -229,7 +230,7 @@ a {
   margin: 10px 65px;
   font-size: 60px;
   font-weight: 100;
-  letter-spacing: 4px;
+  letter-spacing: 10px;
 }
 
 .recent-ripples {
@@ -261,12 +262,23 @@ a {
   color: #B0DCE8;
 }
 
+.photo-info {
+  float: left;
+  display: block;
+  width: 350px;
+  position: relative;
+  top: 7px;
+  left: 20px;
+  border-radius: 3px;
+}
+
 .photo-holder {
   float: left;
-  width: 310px;
-  position: absolute;
-  top: 59px;
-  left: 675px;
+  display: block;
+  width: 350px;
+  position: relative;
+  top: 0px;
+  left: 0px;
   background: #FFFFFF;
   border-radius: 3px;
   color: #A5ADB8;
@@ -274,10 +286,12 @@ a {
 
 .stats {
   float: left;
-  width: 290px;
-  position: absolute;
-  top: 250px;
-  left: 675px;
+  font-size: 15px;
+  display: block;
+  width: 330px;
+  position: relative;
+  top: 10px;
+  left: 0px;
   background: #FFFFFF;
   border-radius: 3px;
   color: #A5ADB8;
