--- a/shout/www/css/style.css
+++ b/shout/www/css/style.css
@@ -193,8 +193,13 @@ input[type="color"] {
   font-family: Avenir-Book;
   font-size: 14px;
   color: #FFFFFF;
-  letter-spacing: 4px;
+ /* letter-spacing: 4px;*/
   line-height: 20px;
+}
+.row {
+  display: flex;
+  padding: 0px;
+  width: 100%;
 }
 .padding > .button.button-block:first-child {
   opacity: .8;
@@ -208,20 +213,27 @@ input[type="color"] {
   line-height: 28px;
   text-align: center;
   text-transform: capitalize;
+  padding-bottom: 0px;
+  padding-top: 0px;
+  margin-bottom: 0px;
 }
 .padding > .button.button-block.facebook {
   border: 0px;
   opacity: .8;
   box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
+  padding-bottom: 0px;
+  padding-top: 0px;
+  margin-bottom: 0px;
 }
 .bar.bar-clear .title {
   color: #fff;
   text-decoration: none;
 }
+
+  /* SIGN UP: */
 .bar.bar-clear .title span.signup {
   display: inline;
   color: #fff;
-  /* SIGN UP: */
   font-family: Avenir-Book;
   font-size: 12px;
   color: #FFFFFF;
@@ -229,8 +241,8 @@ input[type="color"] {
   line-height: 10px;
   text-decoration: none;
 }
-.bar.bar-clear .title span.account {
   /* DON’T HAVE AN ACCOUN: */
+.bar.bar-clear .title span.account {
   display: inline;
   opacity: 0.5;
   font-family: Avenir-Book;
