--- a/shout/www/css/style.css
+++ b/shout/www/css/style.css
@@ -1,7 +1,17 @@
 /* Empty. Add your own CSS if you like */
 * {
   font-family: Avenir-Book, RobotoDraft, Roboto, "Helvetica Neue", "Segoe UI", sans-serif;
+  color: white;
 }
+
+p.ripple-font {
+  font-family: Avenir-Book, "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+  color: #FFF;
+  font-weight: 500;
+  line-height: 1.2;
+  text-transform: none;
+}
+
 h1,
 h2,
 h3,
@@ -13,167 +23,26 @@ h6,
 .h3,
 .h4,
 .h5,
-.h6 {
+.h6,
+.button {
+  text-transform: none;
   color: #FFF;
   font-weight: 500;
   font-family: Avenir-Book, "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
   line-height: 1.2;
 }
-/*.login {
-    background: url('../img/berkeley.jpg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    width: 100%;
-    height: 100%;
-    margin: auto;
-    z-index: 2;
-    position: relative;
-}*/
 
-div.row {
-  justify-content: center;
-}
-
-div.col.ripplecard {
-  padding: 0;
-  margin: 0;
-}
-
-div.row.ripplecard {
-  padding: 0;
-  margin: 5px 0;
-  background-color: rgba(255,255,255,.1);
-}
-
-div.row.ripplecardinfo {
-  overflow:hidden;
-  flex-direction:column;
-  flex-wrap:nowrap;
-  justify-content:space-between;
-  align-items:flex-end;
-  align-content: stretch;
-  height:100%;
-}
-
-div.ripplecardinfobuttons {
-  position:absolute;
-  bottom:0;
-  right:0;
-}
-
-button.button.button-clear {
-  color: white;
-}
-
-.item {
-  border: none;
-}
-
-.item-input {
-  padding: 0;
-}
-
-ion-header-bar.flat.bar.bar-header {
-  background-color: rgba(255,255,255,.1);
-}
-ion-item.item {
-  padding:0;
-  margin:0;
-}
-
-div.tab-nav.tabs {
-  background-color: rgba(255,255,255,.15);
-}
-
-.item p {
+.button.button-clear {
   color: #FFF;
-  font-size: 14px;
-  margin-bottom: 2px;
 }
 
-
-.bar-header {
-  top: 0;
-  border-top-width: 0;
-  border-bottom-width: 1px;
+.list .item {
+  border: none;
+  min-height: 48px;
+  text-align: left;
   background-color: transparent;
-  color: white;
-  opacity: .8;
 }
-.tabs-striped .tabs {
-  background-color: transparent;
-  border-bottom: 0px;
-  padding-top: 2px;
-  opacity: .8;
-  color: white;
-}
-.tabs-striped .tab-item.tab-item-active,
-.tabs-striped .tab-item.active,
-.tabs-striped .tab-item.activated {
-  margin-top: -2px;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  border-width: 1px 0 0 0;
-  /* border-color: #444; */
-}
-/* Enter name: */
 
-.popup-buttons .button .ripple {
-  margin-right: 0px;
-  border-color: #FFFFFF;
-  background-color: #5D6167;
-  color: #fff;
-  border-radius: 50px;
-  opacity: .8;
-}
-.popup-container .popup {
-    width: 250px;
-    max-width: 100%;
-    max-height: 90%;
-    border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.9);
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -moz-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-direction: normal;
-    -webkit-box-orient: vertical;
-    -webkit-flex-direction: column;
-    -moz-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column; 
-  }
-.popup-container.active .popup {
-  -webkit-animation-name: superScaleIn;
-  animation-name: superScaleIn;
-  -webkit-animation-duration: 0.2s;
-  animation-duration: 0.2s;
-  -webkit-animation-timing-function: ease-in-out;
-  animation-timing-function: ease-in-out;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  /* opacity: .5; */
-  background-color: rgba(252, 252, 252, 0.7);
-  /* background-color: #DDD; */
-  border-radius: 10px;
-  text-align: center;
-}
-.login .item {
-  border-bottom: 1px solid white;
-}
-.item-stacked-label .input-label,
-.item-stacked-label .icon {
-  display: inline-block;
-  padding: 4px 0 0 0px;
-  vertical-align: middle;
-  font-family: Avenir-Book;
-  font-size: 14px;
-  color: #FFFFFF;
-  line-height: 28px;
-  letter-spacing: 4px;
-}
 textarea,
 input[type="text"],
 input[type="password"],
@@ -193,15 +62,160 @@ input[type="color"] {
   font-family: Avenir-Book;
   font-size: 14px;
   color: #FFFFFF;
- /* letter-spacing: 4px;*/
+  background-color: rgba(255,255,255,.15);
   line-height: 20px;
 }
-.row {
-  display: flex;
-  padding: 0px;
+
+input.clear-bg {
+  background-color: transparent;
+}
+
+input.bottom-border {
+}
+
+div.row {
+  justify-content: center;
+}
+
+.item {
+  border: none;
+  padding:0;
+  margin:0;
+}
+
+.item-input {
   width: 100%;
 }
-.padding > .button.button-block:first-child {
+
+div.col.ripplecard {
+  padding: 0;
+  margin: 0;
+}
+
+div.row.ripplecard {
+  padding: 0;
+  margin: 5px 0;
+  background-color: rgba(255,255,255,.1);
+}
+
+div.row.ripplecard.info {
+  overflow:hidden;
+  flex-direction:column;
+  flex-wrap:nowrap;
+  justify-content:space-between;
+  align-items:flex-end;
+  align-content: stretch;
+  height:100%;
+}
+
+div.ripplecardinfobuttons {
+  position:absolute;
+  bottom:0;
+  right:0;
+}
+
+ion-header-bar.flat.bar.bar-header {
+  background-color: rgba(255,255,255,.1);
+  top: 0;
+  border-top-width: 0;
+  border-bottom-width: 1px;
+  background-color: transparent;
+  color: white;
+  opacity: .8;
+}
+
+div.tab-nav.tabs {
+  background-color: rgba(255,255,255,.15);
+}
+
+.tabs-striped .tabs {
+  background-color: transparent;
+  border-bottom: 0px;
+  padding-top: 2px;
+  opacity: .8;
+  color: white;
+}
+
+.tabs-striped .tab-item.tab-item-active,
+.tabs-striped .tab-item.active,
+.tabs-striped .tab-item.activated {
+  margin-top: -2px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-width: 1px 0 0 0;
+}
+
+.popup-buttons .button .ripple {
+  margin-right: 0px;
+  border-color: #FFFFFF;
+  background-color: #5D6167;
+  color: #fff;
+  border-radius: 50px;
+  opacity: .8;
+}
+
+.popup-container .popup {
+  width: 250px;
+  max-width: 100%;
+  max-height: 90%;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.9);
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.popup-container.active .popup {
+  -webkit-animation-name: superScaleIn;
+  animation-name: superScaleIn;
+  -webkit-animation-duration: 0.2s;
+  animation-duration: 0.2s;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  /* opacity: .5; */
+  background-color: rgba(252, 252, 252, 0.7);
+  /* background-color: #DDD; */
+  border-radius: 10px;
+  text-align: center;
+}
+
+.login {
+  margin-bottom: 0px;
+}
+
+.login .item {
+  border-bottom: 1px solid rgba(255,255,255,.2);
+  margin:0;
+}
+
+.row.loginspinner {
+  position: absolute;
+  bottom: 25px;
+}
+
+
+.item-stacked-label .input-label,
+.item-stacked-label .icon {
+  display: inline-block;
+  padding: 4px 0 0 0px;
+  vertical-align: middle;
+  font-family: Avenir-Book;
+  font-size: 14px;
+  color: #FFFFFF;
+  line-height: 28px;
+  letter-spacing: 4px;
+}
+button.button.button-block {
   opacity: .8;
   /* bg: */
   border: 1px solid #FFFFFF;
@@ -216,22 +230,29 @@ input[type="color"] {
   padding-bottom: 0px;
   padding-top: 0px;
   margin-bottom: 0px;
+  background-color: transparent;
 }
-.padding > .button.button-block.facebook {
-  border: 0px;
-  opacity: .8;
+
+button.button-block.facebook {
+  opacity: .2;
   box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
-  padding-bottom: 0px;
-  padding-top: 0px;
-  margin-bottom: 0px;
+  padding: 0px;
+  margin: 0px;
+  text-transform:none;
 }
+
 .bar.bar-clear .title {
   color: #fff;
   text-decoration: none;
 }
-
   /* SIGN UP: */
-.bar.bar-clear .title span.signup {
+div.row.signup {
+  position:absolute;
+  bottom:10px;
+  justify-content: center;
+}
+
+a.signup span.signup {
   display: inline;
   color: #fff;
   font-family: Avenir-Book;
@@ -241,8 +262,9 @@ input[type="color"] {
   line-height: 10px;
   text-decoration: none;
 }
+
+a.signup span.account {
   /* DON’T HAVE AN ACCOUN: */
-.bar.bar-clear .title span.account {
   display: inline;
   opacity: 0.5;
   font-family: Avenir-Book;
@@ -263,23 +285,6 @@ input[type="color"] {
   text-align: center;
   color: #FFFFFF;
 }
-/* Sketch doesnt export gradient borders at this point */
-
-/* oval: */
-
-/* border: 2px solid #FFFFFF; */
-
-/* shape: */
-
-/* border: 2px solid #FFFFFF; */
-
-/* path: */
-
-/* border: 2px solid #FFFFFF; */
-
-/* bounds: */
-
-/* bg: */
 
 .sign-in {
   opacity: 0.5;
@@ -325,104 +330,6 @@ input[type="color"] {
   margin-bottom: 0;
   opacity: 0.5;
 }
-.loginItem {
-  margin: 0px;
-  border: 0;
-}
-.signuplink {
-  text-align: center;
-}
-/*.tabs-nav {
-  display:none;
-}*/
-
-/*.tabs-top > .tabs, .tabs.tabs-top {
-  top: 0px;
-}
-*/
-
-/*
-.loginInputContainer {
-  display: flex;
-  justify-content: center;
-  height: 50vh;
-  padding: 5px;
-}
-*/
-
-/* LoginContainer: */
-
-/*
-.loginInputBox {
-  align-self: flex-start;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  background: #D8D8D8;
-  max-width: 90%;
-  width: 50vw;
-  height: 26vh;
-}
-*/
-
-/* Input: */
-
-/*
-.loginInputItem {
-  display: block;
-  background: #FFFFFF;
-  font-family: Avenir-Book;
-  font-size: 6vh;
-  size: 6vh;
-  color: #49B6D3;
-  height: 6vh;
-  padding-left: 5%;
-  padding-right: 5%;
-  margin: 2vh 2vh;
-}
-.loginButtonContainer {
-  display: flex;
-  justify-content: center;
-}
-*/
-
-/* LoginButton */
-
-/*
-.loginButton {
-  background: #49B6D3;
-  font-family: Avenir-Book;
-  font-size: 8vh;
-  color: #FFFFFF;
-  line-height: 1.25em;
-  letter-spacing: 2.5vw;
-  padding-left: 5vw;
-}
-*/
-
-/* Review Page */
-
-/*
-.pictureContainer {
-  display:flex;
-  justify-content: center;
-}
-*/
-
-/*
-.albumPhoto, .inboxPhoto {
-  width:300px;
-  ;
-}
-*/
-
-/*
-.picturePreview {
-  width: 50vw;
-  height: 50vh;
-  align-self: center;
-}
-*/
 
 .pane,
 .view {
@@ -439,12 +346,7 @@ input[type="color"] {
   background-size: cover;
   overflow: hidden;
 }
-.list .item {
-  border: none;
-  min-height: 48px;
-  text-align: left;
-  background-color: transparent;
-}
+
 .item.item-divider {
   border-top: solid 1px rgba(255, 255, 255, .25);
   font-size: 14px;
@@ -477,103 +379,21 @@ div.thumb {
   background-position: center center;
   background-size: cover;
 }
-textarea,
-input[type="text"],
-input[type="password"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="date"],
-input[type="month"],
-input[type="time"],
-input[type="week"],
-input[type="number"],
-input[type="email"],
-input[type="url"],
-input[type="search"],
-input[type="tel"],
-input[type="color"] {
-  background-color: rgba(255, 255, 255, .2);
-  opacity: 1;
-}
-.button-block.ink,
-.button-full.ink,
-.button-block:after {
-  border: 1px solid rgba(255, 255, 255, .5);
-  background-color: transparent;
-  color: #fff;
-  border-radius: 25px;
-  font-weight: 200;
-}
+
 .toggle .track {
   background-color: transparent;
 }
-.item-thumbnail-left > img:first-child,
-.item-thumbnail-left .item-image,
-.item-thumbnail-left .item-content > img:first-child,
-.item-thumbnail-left .item-content .item-image {
-  position: absolute;
-  top: 2px;
-  left: 2px;
-  max-width: 50vw;
-  max-height: 50vw;
-  overflow: hidden;
-  /* width: 100%; */
-  /* height: 100%; */
-  border-radius: 0px;
-}
-.list .photo.item {
-  margin-top: 2px;
-  text-align: right;
-  min-height: 200px;
-  padding: 5px;
-  height: 150px;
-  background-color: rgba(255, 255, 255, 0.05);
-}
+
 .counter {
   position: absolute;
-  color: rgba(255, 255, 255, .5);
+  color: rgba(255, 255, 255, 1);
   bottom: 2px;
   right: 2px;
 }
-.photo-description {} label.item.item-input.review {
-  padding-left: 0;
-  border: none;
-}
-div {
-  border: none;
-}
-.item.item-image {
-  border: none;
-}
-.button-bar {
-  box-shadow: 0 1px 3px rgba(0, 0, 0, .15);
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  width:100%;
-}
-.button-bar>.button .icon:before,
-.button-bar>.button:before {
-  line-height: initial;
-  color: white;
-}
-.float-container {
-  position: relative;
-}
-
-.spinner {
-  margin: 0 auto;
-  display: block;
-}
 
 .spinner svg {
-  position: fixed;
   width: 80px;
   height: 80px;
-  top: 50%;
-  left: 50%;
-  margin-top: -40px;
-  margin-left: -40px;
   stroke: #3AFEA4;
   fill: #3AFEA4;
 }
@@ -591,7 +411,7 @@ div {
     display: -ms-flexbox !important;
     display: -webkit-flex !important;
     display: flex !important;
-    
+
    -webkit-box-direction: normal !important;
     -moz-box-direction: normal !important;
     -webkit-box-orient: horizontal !important;
@@ -599,8 +419,7 @@ div {
     -webkit-flex-direction: row !important;
     -ms-flex-direction: row !important;
     flex-direction: row !important;
-   
-  
+
     -webkit-box-align: center !important;
     -moz-box-align: center !important;
     -webkit-align-items: center !important;
