--- a/shout/www/css/style.css
+++ b/shout/www/css/style.css
@@ -98,7 +98,7 @@ div.row.ripplecard {
   background-color: rgba(255,255,255,.1);
 }
 
-div.row.ripplecard.info {
+div.row.ripplecardinfo {
   overflow:hidden;
   flex-direction:column;
   flex-wrap:nowrap;
@@ -247,9 +247,11 @@ button.button-block.facebook {
 }
   /* SIGN UP: */
 div.row.signup {
+  flex-direction:column;
   position:absolute;
   bottom:10px;
   justify-content: center;
+  align-items:center;
 }
 
 a.signup span.signup {
