--- a/shout/www/css/style.css
+++ b/shout/www/css/style.css
@@ -428,11 +428,16 @@ div.thumb {
     -ms-flex-align: center !important;
     align-items: center !important;
 }
-
+  
 .modalCaption {
-  bottom: 5%;
+  bottom: 0%;
   left: 0;
   right: 0;
   top: 90%;
   position: fixed;
+}
+
+.modalCaption p {
+  font-size: 125%;
+  line-height: 2;
 }
