--- a/dashboard/public/styles/styles.css
+++ b/dashboard/public/styles/styles.css
@@ -317,3 +317,13 @@ a {
   border: 1px solid #DDDDDD;
   border-radius: 3px;
 }
+
+.example-enter {
+  opacity: 0.01;
+  transition: opacity 0.5s ease-in;
+}
+
+.example-enter.example-enter-active {
+  opacity: 1;
+
+}
