--- a/shout/www/css/style.css
+++ b/shout/www/css/style.css
@@ -464,7 +464,7 @@ button.ripplecardbuttons:active {
   color: rgba(0,0,0,0.5);
 }
 
-button.ripplecardbuttons.active {
+button.ripplecardbuttons.activated {
   color: rgba(0,0,0,0.5);
 }
 
