--- a/shout/www/app/layout/tabs.html
+++ b/shout/www/app/layout/tabs.html
@@ -1,26 +1,3 @@
-<!--
-Create tabs with an icon and label, using the tabs-positive style.
-Each tab's child <ion-nav-view> directive will have its own
-navigation history that also transitions its views in and out.
--->
-
-
-<!-- <ion-nav-bar class="bar-striped bar-top bar-background-positive tabs-color-light"> -->
-
-  <!-- <ion-nav title="Settings" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/settings">
-    <ion-nav-view name="tab-settings"></ion-nav-view>
-  </ion-nav> -->
-  <!-- Nothing Tab -->
-  <!-- <ion-nav title="Ripple">
-    <ion-nav-view name="tab-ripple"></ion-nav-view>
-  </ion-nav> -->
-  <!-- Logout Tab -->
- <!--  <ion-nav title="Logout" icon-off="ion-ios-close-outline" icon-on="ion-ios-close" href="#/tab/settings">
-    <ion-nav-view name="tab-logout"></ion-nav-view>
-  </ion-nav> -->
-
-<!-- </ion-nav-bar> -->
-
 <ion-tabs class="tabs-striped ink">
 
   <!-- Album Tab -->
@@ -29,9 +6,9 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Camera Tab -->
-  <ion-tab title="Camera" icon-off="ion-ios-camera-outline" icon-on="ion-ios-camera" ng-click="vm.takePhoto()">
-    <ion-nav-view name="tab-camera"></ion-nav-view>
-  </ion-tab>
+  <!-- <ion&#45;tab title="Camera" icon&#45;off="ion&#45;ios&#45;camera&#45;outline" icon&#45;on="ion&#45;ios&#45;camera" ng&#45;click="vm.takePhoto()"> -->
+  <!--   <ion&#45;nav&#45;view name="tab&#45;camera"></ion&#45;nav&#45;view> -->
+  <!-- </ion&#45;tab> -->
 
   <!-- Inbox Tab -->
   <ion-tab title="Inbox" icon-off="ion-ios-email-outline" icon-on="ion-ios-email" href="#/tab/inbox">
@@ -45,7 +22,5 @@ navigation history that also transitions its views in and out.
 
 </ion-tabs>
 
-<!-- <button ng-click="vm.takePhoto()" class="button button-positive button-fab button-fab-bottom-right ink">
-  <i class="icon ion-camera"></i>
-</button> -->
+<!-- <button class="button button&#45;fab&#45;bottom&#45;right button&#45;positive icon ion&#45;ios&#45;camera" ng&#45;click"vm.takePhoto()"></button> -->
 
